# business-assistant-imap-plugin

./: .env.example  .gitignore  CLAUDE.md  README.md  code_analysis_rules.json  install.bat  pyproject.toml  update.bat
src/business_assistant_imap/: __init__.py  config.py  constants.py  database.py  draft_builder.py  email_service.py  email_service_compose.py  email_service_done.py  email_service_meeting.py  greeting_builder.py  invite_handler.py  meeting_parser.py  plugin.py  send_later.py
tests/: conftest.py  test_config.py  test_database.py  test_draft_builder.py  test_edit_draft.py  test_email_service.py  test_email_service_compose.py  test_email_service_done.py  test_email_service_extras.py  test_email_service_filter.py  test_email_service_meeting.py  test_greeting_builder.py  test_greeting_id.py  test_invite_handler.py  test_meeting_parser.py  test_plugin_registration.py  test_send_later.py  test_set_folder_rule.py
tools/: tests.bat
